--- a/EstateAgency/mysite/main/templates/main.html
+++ b/EstateAgency/mysite/main/templates/main.html
@@ -7,50 +7,56 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
-    <aside class="banner-object">
-        <a href="https://mak.by/ru/">
-            <img src="static/banner/mac.jpg" alt="Advertising banner" width="200">
-        </a>
-    </aside>
+    <div class="main-content">
+        <aside class="banner-object">
+            <a href="https://mak.by/ru/">
+                <img src="static/banner/mac.jpg" alt="Advertising banner" width="200">
+            </a>
+        </aside>
 
-    <section itemscope itemtype="https://schema.org/Article" class="latest-article">
-        <h2 itemprop="name">Latest article:</h2>
-        <h3 itemprop="headline">{{ latest_article.title }}</h3>
-        <p itemprop="description">{{ latest_article.content|slice:"200" }}
-            {% if latest_article.content|length > 200 %}...{% endif %}</p>
-    </section>
+        <section itemscope itemtype="https://schema.org/Article" class="latest-article">
+            <h2 itemprop="name">Latest article:</h2>
+            <h3 itemprop="headline">{{ latest_article.title }}</h3>
+            <p itemprop="description">{{ latest_article.content|slice:"200" }}
+                {% if latest_article.content|length > 200 %}...{% endif %}</p>
+        </section>
 
-    <article itemscope itemtype="https://schema.org/Organization" class="partner-companies">
-    <h2>Partner companies:</h2>
-    <div class="partners">
-        <ul class="partner-logos">
-            <li itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner-item company-block">
-                <a href="https://alfabank.ru/">
-                    <img src="static/partners/alpha.png" alt="Logo 1" class="partner-logo">
-                </a>
-                <span class="company-name">Alpha Bank</span>
-            </li>
-            <li itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner-item company-block">
-                <a href="https://www.amazon.com/">
-                    <img src="static/partners/amazon.png" alt="Logo 2" class="partner-logo">
-                </a>
-                <span class="company-name">Amazon</span>
-            </li>
-            <li itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner-item company-block">
-                <a href="https://github.com/">
-                    <img src="static/partners/github.png" alt="Logo 3" class="partner-logo">
-                </a>
-                <span class="company-name">GitHub</span>
-            </li>
-            <li itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner-item company-block">
-                <a href="https://vk.com/">
-                    <img src="static/partners/vk.png" alt="Logo 4" class="partner-logo">
-                </a>
-                <span class="company-name">VK</span>
-            </li>
-        </ul>
+        <article itemscope itemtype="https://schema.org/Organization" class="partner-companies">
+            <h2>Partner companies:</h2>
+            <div class="partner-list">
+                <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
+                    <a href="https://alfabank.ru/">
+                        <div class="partner-logo-container">
+                            <img src="static/partners/alpha.png" alt="Logo 1" class="partner-logo">
+                        </div>
+                        <span class="company-name">Alpha Bank</span>
+                    </a>
+                </div>
+                <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
+                    <a href="https://www.amazon.com/">
+                        <div class="partner-logo-container">
+                            <img src="static/partners/amazon.png" alt="Logo 2" class="partner-logo">
+                        </div>
+                        <span class="company-name">Amazon</span>
+                    </a>
+                </div>
+                <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
+                    <a href="https://www.github.com/">
+                        <div class="partner-logo-container">
+                            <img src="static/partners/github.png" alt="Logo 3" class="partner-logo">
+                        </div>
+                        <span class="company-name">GitHub</span>
+                    </a>
+                </div>
+                <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
+                    <a href="https://www.vk.com/">
+                        <div class="partner-logo-container">
+                            <img src="static/partners/vk.png" alt="Logo 4" class="partner-logo">
+                        </div>
+                        <span class="company-name">VK</span>
+                    </a>
+                </div>
+            </div>
+        </article>
     </div>
-    </article>
-</div>
 {% endblock %}
