--- a/EstateAgency/mysite/main/templates/main.html
+++ b/EstateAgency/mysite/main/templates/main.html
@@ -8,9 +8,14 @@
 
 {% block content %}
     <div class="main-content">
-        <aside class="banner-object">
-            <a href="https://mak.by/ru/">
-                <img src="static/banner/mac.jpg" alt="Advertising banner" width="200">
+        <aside class="banner-object1">
+            <a href="https://openai.com/gpt-4">
+                <img src="static/banner/GPT.png" alt="Advertising banner & Out Future" width="50">
+            </a>
+        </aside>
+        <aside class="banner-object2">
+            <a href="https://www.google.com">
+                <img src="static/banner/Google.png" alt="Advertising banner & Out Future" width="50">
             </a>
         </aside>
 
@@ -25,11 +30,11 @@
             <h2>Partner companies:</h2>
             <div class="partner-list">
                 <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
-                    <a href="https://alfabank.ru/">
+                    <a href="https://www.youtube.com/">
                         <div class="partner-logo-container">
-                            <img src="static/partners/alpha.png" alt="Logo 1" class="partner-logo">
+                            <img src="static/partners/YouTube.png" alt="Logo 1" class="partner-logo">
                         </div>
-                        <span class="company-name">Alpha Bank</span>
+                        <span class="company-name">YouTube</span>
                     </a>
                 </div>
                 <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
@@ -49,11 +54,11 @@
                     </a>
                 </div>
                 <div itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" class="partner">
-                    <a href="https://www.vk.com/">
+                    <a href="https://www.facebook.com/">
                         <div class="partner-logo-container">
-                            <img src="static/partners/vk.png" alt="Logo 4" class="partner-logo">
+                            <img src="static/partners/FaceBook.png" alt="Logo 4" class="partner-logo">
                         </div>
-                        <span class="company-name">VK</span>
+                        <span class="company-name">Facebook</span>
                     </a>
                 </div>
             </div>
