--- a/EstateAgency/mysite/about/templates/about.html
+++ b/EstateAgency/mysite/about/templates/about.html
@@ -6,21 +6,37 @@
 <link rel="stylesheet" type="text/css" href="/static/css/about.css"> <!-- Подключаем ваши стили -->
 {% endblock %}
 
+
 {% block content %}
-<figure itemscope itemtype="http://schema.org/EstateAgency">
-    <p><img src="/static/logo/logo.png" alt="Logo company" width="400" class="company-logo"></p> <!-- Добавляем класс для логотипа -->
-    <figcaption itemprop="name" class="company-name">Estate Agency</figcaption> <!-- Добавляем класс для имени компании -->
+<div class="main-container">
+<figure itemscope itemtype="https://schema.org/Organization">
+    <p><img src="/static/logo/logo.png" alt="Logo company" width="100" class="company-logo"></p>
+    <figcaption itemprop="name" class="company-name">Estate Agency</figcaption>
 </figure>
 
-<a href="#n1" class="fixed-nav">Certificate</a>
+<article>
+    <blockquote class="quote english">Remember:<br>
+        Airplane
+        <wbr>
+        flying,<br>
+        against the wind,<br>
+        not
+        <wbr>
+        with it.
+    </blockquote>
+</article>
 
-<article class="certificate"> <!-- Добавляем класс для сертификата -->
-    <p itemprop="description"><b>Estate Agency</b>
+<a href="#n1" class="certificate-link">Certificate</a>
+
+<article class="certificate">
+    <p itemprop="description"><b></b>
+        <div class="company-description">
         We are the oldest real estate agency in our region, specializing in helping clients find and acquire their ideal
         homes. Our experience and professionalism make us a trusted partner in the real estate world.
-        <em itemprop="numberOfImmovables">200+ estate objects</em>
-        <strong>Our Advantages:</strong>
-        <ol>
+        </div>
+        <br><br><em itemprop="numberOfImmovables">200+ estate objects</em>
+        <br><br><strong>Our Advantages:</strong>
+        <ol class="ol-marker-list">
             <li>Experience and Reliability: We have been operating in the real estate market for many years and have gained the
                 trust of thousands of clients. Our experts possess deep knowledge of the real estate industry and are always
                 ready to share their insights with you.</li>
@@ -33,18 +49,19 @@
             <li>Transparency and Honesty: We value the trust of our clients and always provide honest information about each
                 property. There will be no unpleasant surprises.</li>
         </ol>
-    </p>
 </article>
 
 <article>
-    <p>Founder: <q cite="https://www.instagram.com/tikhanionok/"><sup>We aim</sup> to make the process of buying or
-        selling real estate as comfortable and secure as possible for you.
-        Trust the professionals and experience the best in the world of real estate with our Estate Agency</q>
-        <time datetime="1990-08-6" itemprop="foundingDate">Sep 1th</time>
+    <p>Founder: <a href="https://www.instagram.com/tikhanionok/">
+        <sup>We aim</sup> to make the process of buying or selling real estate as comfortable and secure as possible
+        for you.
+        Trust the professionals and experience the best in the world of real estate with our Estate Agency</a>
+        <time datetime="1990-08-6" itemprop="foundingDate"></time>
     </p>
     <hr>
 </article>
 
+<!--
 <article>
     <p>
         To operate the site uses <abbr title="База данных">DB</abbr> <u>sqlite3</u><br>
@@ -61,40 +78,30 @@
     <p>Example of a registered user<samp>Ilya</samp></p>
     <hr>
 </article>
+-->
 
 <article>
-    <blockquote>Remember:<br>
-        Airplane
-        <wbr>
-        flying,<br>
-        against the wind,<br>
-        not
-        <wbr>
-        with it.
-    </blockquote>
-</article>
-
-<article>
-    <video controls style="width: 100%;" class="video"> <!-- Добавляем класс для видео -->
+    <video controls style="width: 100%;" class="video">
         <source src="/static/video/estateagency.mp4" type="video/mp4">
         Your browser does not support video playback.
     </video>
-
-    <audio controls style="width: 100%;" class="audio"> <!-- Добавляем класс для аудио -->
+    <br>
+    <audio controls style="width: 100%;" class="audio">
         <source src="/static/mp3/lofi.mp3" type="audio/mp3">
         Your browser does not support audio playback.
     </audio>
+    <br>
 </article>
 
 <article>
-    <iframe src="https://www.wikiwand.com/ru/HTML5" width="468" height="600">
+    <iframe src="https://www.wikiwand.com/ru/HTML5" width="100" height="200" class="iframe_ref">
         Your browser does not support iframes!
     </iframe>
 </article>
 
 <article>
-    <h2 itemprop="event" class="history">History of our company:</h2> <!-- Добавляем класс для истории по годам -->
-    <ul class="history"> <!-- Добавляем класс для истории по годам -->
+    <h2 itemprop="event">History of our company:</h2>
+    <ul class="history">
         <li><strong>Establishment:</strong> The real estate agency was founded in 20001 in Lepel.</li>
         <li><strong>Construction: </strong> The construction of the agency's facilities began in 1985 and was completed
             in 2002.</li>
@@ -119,14 +126,13 @@
 
 <article>
     <h2 itemprop="contact">Contact Information</h2>
-    <p itemprop="address">Address: Minsk, Belarus</p>
-    <p itemprop="telephone">Phone: +375 (29) 849-40-96</p>
-    <p itemprop="email">Email: estateagency@gmail.com</p>
+    <p itemprop="address" class="requisites">Address: Minsk, Belarus</p>
+    <p itemprop="telephone" class="requisites">Phone: +375 (29) 849-40-96</p>
+    <p itemprop="email" class="requisites">Email: estateagency@gmail.com</p>
 </article>
 
-<h2 id="n1" class="certificate">Certificate</h2> <!-- Добавляем класс для сертификата -->
-
-<div style="border: 3px #333671 solid; width: 500px" class="certificate"> <!-- Добавляем класс для сертификата -->
+<h2 id="n1" class="certificate">Certificate</h2>
+<div style="border: 3px #333671 solid; width: 500px" class="certificate">
     <h1 style="color: #0059b2" align="center">UNIFIED ESTATE REGISTER</h1>
     <h1 style="color: red" align="center">CERTIFICATE</h1>
     <h1 style="color: #0059b2" align="center">ON DATA INCLUSION</h1>
@@ -140,18 +146,18 @@
     <p align="center">(TIN 23456723)</p>
     <h4 align="center"><u>Registry Number: 5478</u></h4>
     <br><br>
-
-    <div class="example3">
-        <div class="example_text">
+    <div>
+        <div>
             <h6>Tsikhanionak I.A.</h6>
             <h6>Director of the "Luxe Living Realty" Association</h6>
         </div>
     </div>
     <hr>
-    <p align="right"><small>Association "Luxe Living Realty"<br> in the field of outbound agency "Luxe Living Realty"</small></p>
-    <p align="right"><small>985356 Minsk, Kireenko Street, House 3</small></p>
-    <p align="right"><small>Tel. +375 (29) 849-40-96</small></p>
-    <p align="right">e-mail: office@cinema.by<small></small></p>
+    <p align="right" class="requisites"><small>Association "Luxe Living Realty"<br> in the field of outbound agency "Luxe Living Realty"</small></p>
+    <p align="right" class="requisites"><small>985356 Minsk, Kireenko Street, House 3</small></p>
+    <p align="right" class="requisites"><small>Tel. +375 (29) 849-40-96</small></p>
+    <p align="right" class="requisites">e-mail: office@cinema.by<small></small></p>
 </div>
 
+</div>
 {% endblock %}
