--- a/EstateAgency/mysite/static/css/news.css
+++ b/EstateAgency/mysite/static/css/news.css
@@ -2,13 +2,18 @@
 .news-list {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .news-item {
-  margin-bottom: 20px;
+  flex-basis: calc(33.33% - 20px);
   padding: 20px;
   border: 1px solid #ccc;
   background-color: #fff;
+  margin-bottom: 20px;
+  transition: transform 0.3s; /* Добавим анимацию для раскрытия */
 }
 
 /* Стили для заголовка статьи */
@@ -16,6 +21,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
+  text-align: center; /* Центрируем текст по горизонтали */
 }
 
 /* Стили для краткой информации */
@@ -31,15 +37,18 @@
 .news-image {
   max-width: 100%;
   height: auto;
-  margin-bottom: 10px;
+  margin: 0 auto; /* Центрируем изображение по горизонтали */
+  display: block;
 }
 
 /* Стили для кнопки "Читать далее" */
 .read-more-button {
-  display: inline-block;
+  display: block; /* Изменим на блочный элемент, чтобы располагалась по центру */
+  margin: 0 auto; /* Центрируем кнопку по горизонтали */
   padding: 10px 20px;
-  background-color: #333;
+  background: radial-gradient(ellipse at center, #673ab7 0%, rgba(2,0,36,1) 25%, rgba(79,1,91,1) 100%); /* Deep Purple */
   color: #fff;
+  text-align: center;
   text-decoration: none;
   font-weight: bold;
   border-radius: 5px;
@@ -50,9 +59,14 @@
   background-color: #555;
 }
 
+/* Добавим стили для "раскрытия" карточки при наведении */
+.news-item:hover {
+  transform: scale(1.05);
+}
+
 /* Многоколоночный макет для текста статьи */
 .article-content {
-  column-count: 2; /* Установите желаемое количество колонок */
+  column-count: 2;
   column-gap: 20px;
 }
 
